static/styles/style.css
/*mobile first*/

@media only screen and (max-width: 400px) {
body { font-size:2em;}
} 

@media only screen and (max-width: 800px) {
body { font-size:100%;}
} 

@media only screen and (max-width: 1100px) {
body { font-size:120%;}
}


body {
    padding: 5px 15px 15px 15px;
    background-color: #fcfcfc;
}

h1 {
    font-family: 'Petit Formal Script', cursive;
}

h2, h3, p, div {
    font-family: 'Raleway', sans-serif;
}

.name {
    margin-bottom: 0;
    font-size: 50px;
    color: #D097FF;
}

.block {
    margin: 0 0 35px 0;
    /*border-bottom: 1px solid purple;*/
}

.tagline {
    margin: 0 0 8px 20px;
}

.hide {
    display: none;
}

.menu:hover + .hide {
    display: block;
}


/*image class styling*/

/*.self {

}*/

.icon {
    height: 15%;
}

.menu {
    /*display: inline-block;
    position: relative;
    margin: -70px 0 0px 1339px;*/
    /*width: 194%;
    height: 12%;*/

    max-width: 4.5%;
    float: right;
    height: inherit;
}


.bio-container {
    margin: 20px 20px 0 0;
}

.self {
    /*float: left;*/
    max-width: 35%;
    border-radius: 100%;
    margin: 35px 65px 0 70px;
}

.bio {
    overflow: hidden;
    padding: 70px 100px 0 0;
}

.slideshow {
    text-align: center;
}

.slideshow img {
    margin-left: -25px;
    min-height: 100%;
    max-height: 100%;
    vertical-align: top;
    box-shadow: 5px 2px 15px #001122;
}

.slideshow img:hover {
    margin: 0px 45px 0px 20px;
    transition: .2s ease-in-out;
}

